--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -40,7 +40,6 @@ global without sharing virtual class Rollup {
   protected Boolean isFullRecalc = false;
   protected Boolean isNoOp;
   protected Boolean isCDCUpdate = false;
-  protected RollupAsyncProcessor fullRecalcProcessor;
   protected Integer queryCount;
 
   /**
@@ -141,6 +140,8 @@ global without sharing virtual class Rollup {
 
   public virtual class DMLHelper {
     public virtual void doUpdate(List<SObject> recordsToUpdate) {
+      recordsToUpdate.sort();
+      RollupLogger.Instance.log('updating the following records:', recordsToUpdate, LoggingLevel.FINE);
       Database.DMLOptions dmlOptions = new Database.DMLOptions();
       dmlOptions.AllowFieldTruncation = true;
       Database.update(recordsToUpdate, dmlOptions);
@@ -197,7 +198,7 @@ global without sharing virtual class Rollup {
     isDeferralAllowed = value;
   }
 
-  protected Rollup getAsyncRollup(
+  protected RollupAsyncProcessor getAsyncRollup(
     List<Rollup__mdt> rollupOperations,
     SObjectType sObjectType,
     List<SObject> calcItems,
@@ -227,7 +228,9 @@ global without sharing virtual class Rollup {
 
   protected virtual Map<String, String> customizeToStringEntries(Map<String, String> props) {
     this.addToMap(props, 'Calc Items', this.calcItems?.size() > 10 ? (Object) '10 items or more ...' : (Object) this.calcItems);
-    this.addToMap(props, 'Old Calc Items', this.oldCalcItems?.size() > 10 ? (Object) '10 items or more ...' : (Object) this.oldCalcItems);
+    if (this.oldCalcItems?.isEmpty() == false) {
+      this.addToMap(props, 'Old Calc Items', this.oldCalcItems.size() > 10 ? (Object) '10 items or more ...' : (Object) this.oldCalcItems);
+    }
     this.addToMap(props, 'Rollup Metadata', this.metadata);
     this.addToMap(props, 'Rollup Control', this.rollupControl);
     this.addToMap(props, 'Query Count', this.queryCount);
@@ -2014,7 +2017,6 @@ global without sharing virtual class Rollup {
       }
     }
     if (String.isNotBlank(potentialWhereClause)) {
-      // String whereClause = '' + potentialWhereClause + ' AND ';
       String whereClause = '(' + potentialWhereClause + ') AND ';
       wrapper.setQuery(whereClause + wrapper.getQuery());
     }
@@ -2123,7 +2125,7 @@ global without sharing virtual class Rollup {
     return null;
   }
 
-  private static Rollup getRollup(
+  private static RollupAsyncProcessor getRollup(
     List<Rollup__mdt> rollupOperations,
     SObjectType sObjectType,
     List<SObject> calcItems,
@@ -2131,7 +2133,7 @@ global without sharing virtual class Rollup {
     Evaluator eval,
     InvocationPoint rollupInvokePoint
   ) {
-    Rollup rollupConductor = new RollupAsyncProcessor(rollupInvokePoint, calcItems, oldCalcItems);
+    RollupAsyncProcessor rollupConductor = new RollupAsyncProcessor(rollupInvokePoint, calcItems, oldCalcItems);
     if (rollupOperations.isEmpty() || calcItems.isEmpty()) {
       return rollupConductor;
     } else if (rollupOperations.size() == 1) {
